examples/test/testpolicy9681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9681
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key43: value27
      key30: value31
      key37: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value36
          key31: value16
          key11: value17
      podSelector:
        matchLabels:
          key5: value35
